<resources>
    <string-array name="categories">
        <item>1=Accessories</item>
        <item>2=Cake Makers</item>
        <item>3=Car Rentals</item>
        <item>4=Catering</item>
        <item>5=Dancers</item>
        <item>6=DJs</item>
        <item>22=Drinks/Liquor</item>
        <item>7=Event Decorators</item>
        <item>8=Event Planning</item>
        <item>9=Fashion Designers</item>
        <item>10=Hairstyling</item>
        <item>11=Host/MCs</item>
        <item>12=Hotels/Accommodation</item>
        <item>13=Make-up/Beauty</item>
        <item>14=Musician/Band</item>
        <item>15=Photography</item>
        <item>16=Security</item>
        <item>17=Souvenirs/Corporate Gifts</item>
        <item>18=Textile/Aso-Ebi</item>
        <item>19=Usher</item>
        <item>20=Venues</item>
        <item>21=Video Coverage</item>
    </string-array>
    <string name="app_name">uPlanIt</string>
    <string name="textview_id">id</string>
    <string name="textview_username">Username</string>
    <string name="textview_password">Password</string>
    <string name="button_previous">Previous</string>
    <string name="button_next">Next</string>
    <string name="done">Next</string>
    <string name="facebook_app_id">276634202769160</string>
    <string name="fb_login_protocol_scheme">fb276634202769160</string>
    <string name="browse_brands">Browse Brands</string>
    <string name="fav_brands">Favourite Brands</string>
    <string name="usage_terms">Terms of Use</string>
    <string name="about_page">About</string>
    <string name="contact_us">Contact Us</string>
    <string name="go_premium">Go Premium</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="prompt_create">Login or sign up to plan your event</string>
    <string name="prompt_login">Login/Register</string>
    <string name="prompt_logout">Logout</string>
    <string name="logged_out">You have been logged out</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_brandName">Brand Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_reset_password">Reset Password</string>
    <string name="prompt_password_help">Forgot your password?</string>
    <string name="prompt_register_brand">To Create Brand Profile</string>
    <string name="prompt_registered">Already Got An Account?</string>
    <string name="prompt_register_user">Not A Brand?</string>
    <string name="prompt_register_here">Register Here</string>
    <string name="password_help">Enter your email below, a temporary password will be generated and sent to the email address</string>
    <string name="password_generated">A temporary password has been generated and sent to your email address</string>
    <string name="password_sub_help">Note: The email you enter must be the same as the one you registered with</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_phone_copied">Phone number copied to clipboard</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_location">Location</string>
    <string name="prompt_description">Services Description</string>
    <string name="already_got_account">Already got an account?</string>
    <string name="login_here">Login Here</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="not_brand">Not a brand?</string>
    <string name="create_brand">To create a brand account</string>
    <string name="register_here">Register here</string>
    <string name="upload_dp_string">Upload Brand Logo</string>
    <string name="terms_statement">By signing up you agree with the </string>
    <string name="terms_string">Terms of Use</string>
    <string name="privacy_string">Privacy Policy</string>
    <string name="click_here_string">Click Here</string>
    <string name="prompt_to_exit">Press back again to exit uPlanIt</string>
    <string name="logo_description">uPlanIt</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_up">Create Account</string>
    <string name="action_brand_sign_up">Create Brand Account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_skip">Skip For Now</string>
    <string name="action_submit">Submit</string>
    <string name="v_phone_header">Verify Phone Number</string>
    <string name="v_location_header">Verify Brand Address</string>
    <string name="verificationPending">Information sent, your profile will be updated once verified</string>
    <string name="send_code">Verify Phone Number</string>
    <string name="verify_address">Verify Address</string>
    <string name="no_login_status">Log In</string>
    <string name="search_keyword">Enter Brand name/Keyword </string>
    <string name="search_string">Search</string>
    <string name="title_clear_list">Clear list</string>
    <string name="confirm_events_clear">Do you really want to delete all your saved events?</string>
    <string name="confirm_fav_clear">Do you really want to delete all your saved favourites?</string>
    <string name="action_search_events">Search Events</string>
    <string name="save_event">Save Event</string>
    <string name="update_event">Edit Event</string>
    <string name="share_event">Share Event</string>
    <string name="event_name_string">Event Name</string>
    <string name="add_event_image_string">Add Event DP</string>
    <string name="event_start_string">Event Starts</string>
    <string name="event_end_string">Event Ends</string>
    <string name="event_location_string">Event Location</string>
    <string name="event_detail_string">Event Detail</string>
    <string name="invite_people_string">Invite People</string>
    <string name="no_invitees_string">No one has been invited</string>
    <string name="no_event">You haven\'t planned any event </string>
    <string name="plan_event_now">Plan an event now</string>
    <string name="enter_date_string">Select Date</string>
    <string name="enter_time_string">Time</string>
    <string name="default_date_time">Thur, Feb 9, 2017 09:55</string>
    <string name="edit_password">Change Password</string>
    <string name="edit_info">Edit Profile</string>
    <string name="edit_dp">Change Photo</string>
    <string name="manage_verifications">Verify Contact Details</string>
    <string name="brand_logout">Logout</string>
    <string name="upload_images">Upload Pictures</string>
    <string name="upload_more_images">Upload More Pictures</string>
    <string name="upload_more_premium">Upload more: Go premium</string>
    <string name="edit_gallery">Edit Gallery</string>
    <string name="add_favourite">Add Favourite</string>
    <string name="remove_favourite">Remove Favourite</string>
    <string name="share_brand">Share Brand</string>
    <string name="warning_select_image">Select an image before you submit</string>
    <string name="warning_select_different_image">Error processing image, select different image</string>
    <string name="warning_no_image_selected">"You haven\'t selected an image"</string>
    <string name="wrong_something">"Something went wrong"</string>
    <string name="error_duplicate_event_name">This event name is already in your events</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_brandName">Invalid Brand Name format</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">Password is too short or contains spaces</string>
    <string name="error_invalid_input_xters">Response contains invalid characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_date">Select correct date</string>
    <string name="error_duplicate_password">The current and new password are same</string>
    <string name="error_unmatched_passwords">Password does not match with new password</string>
    <string name="error_password_update">Password update failed</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_phone">This phone number is invalid</string>
    <string name="error_username_taken">This username is associated with another account</string>
    <string name="error_dataConnection">Connection error&#8230; please check data connection and retry</string>
    <string name="error_processing">Processing error&#8230; please check data connection and retry</string>
    <string name="error_email_taken">This email is associated with another account</string>
    <string name="error_username_email_taken">This username is associated with another account</string>
    <string name="error_creating_account">Problem creating your account. \n Check internet connection and retry</string>
    <string name="swipe_to_refresh_page">Swipe down to reload</string>
    <string name="empty_gallery_premium">No picture in your gallery</string>
    <string name="empty_gallery_admin">No picture in your gallery\nYou have 9 upload slots free</string>
    <string name="empty_gallery">No picture in brand gallery</string>
    <string name="reload_page">Reload page</string>
    <string name="empty_search">No result found for :\n</string>
    <string name="empty_fav">You don\'t have any favourite saved. \n
        Select a favourite by clicking the heart icon on the brand pages
    </string>
    <string name="fav_not_found">No favourite brand found</string>
    <string name="successful_login">You have been successfully logged in.</string>
    <string name="registration_successful">Thank you for signing up, now get to planning!</string>
    <string name="password_update_ok">Password update successful</string>
    <string name="info_update_ok">Update successful</string>
    <string name="brand_registration_continues">Thank you for signing up, complete profile info to continue.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="goto_register">No account yet? Register Here</string>
    <string name="goto_brand_register">To create A Brand Account, Register Here</string>
    <string name="goto_login">Already got an account? Login Here</string>
    <string name="goto_user_registration">Not A Brand? Register Here</string>
    <string name="progress_loading_string">Loading &#8230;</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search_brands">Search Brands</string>
    <string name="action_share">Share</string>
    <string name="required_field_text">Required</string>
    <string name="close_text">Close</string>
    <string name="nav_account">My Account</string>
    <string name="nav_my_events">My Events</string>
    <string name="nav_browse_brands">Brands</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_favorites">Favourites</string>
    <string name="select_category">Select category</string>
    <string name="upload_selected_images">Upload</string>
    <string name="clear_selected_images">Clear</string>
</resources>