<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dappergeek0.uplanit.fragments.BrandDashGalleryFragment">
    <item
        android:id="@+id/upload_images"
        android:orderInCategory="100"
        android:title="@string/upload_images"
        app:showAsAction="never" />
    <item
        android:id="@+id/upload_more_premium"
        android:orderInCategory="105"
        android:visible="false"
        android:title="@string/upload_more_premium"
        app:showAsAction="never" />
    <item
        android:id="@+id/edit_gallery"
        android:orderInCategory="110"
        android:visible="false"
        android:title="@string/edit_gallery"
        app:showAsAction="never" />
    <item
        android:id="@+id/brand_logout"
        android:orderInCategory="115"
        android:title="@string/brand_logout"
        app:showAsAction="never" />

</menu>
