<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:padding="@dimen/margin_five"
                android:paddingTop="0dp"
                tools:context="com.dappergeek0.uplanit.dialogs.FragmentChangePassword">

    <!-- Separator -->
    <View
        android:id="@+id/sep0"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_five"
        android:layout_marginBottom="@dimen/margin_five"
        android:paddingBottom="@dimen/margin_five"
        android:background="@color/light_grey"/>

    <RelativeLayout
        android:id="@+id/input_form"
        android:layout_below="@id/sep0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/password_reset_note"
            android:text="@string/password_help"
            android:textSize="@dimen/text_eighteen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/password_sub_note"
            android:layout_below="@id/password_reset_note"
            android:textSize="@dimen/text_fourteen"
            android:textStyle="italic"
            android:textColor="@color/colorAccent"
            android:layout_margin="@dimen/micro_margin"
            android:text="@string/password_sub_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- email input layout -->
        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_below="@id/password_sub_note"
            android:layout_marginTop="@dimen/margin_twenty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/email_text"
                android:textColor="@color/black"
                android:layout_marginBottom="@dimen/margin_five"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:text="@string/prompt_email"
                android:textSize="@dimen/activity_titles"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email_in"
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/border_white"
                    android:hint="@string/required_field_text"
                    android:layout_height="wrap_content"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <!--success message layout-->

        <RelativeLayout
            android:id="@+id/buttons_layout"
            android:layout_below="@id/email_layout"
            android:layout_marginTop="@dimen/micro_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/layout_dialog_buttons"/>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sent_layout"
        android:layout_below="@id/sep0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sent_report"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/text_fifteen"
            android:text="@string/password_generated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/close_btn"
            android:layout_below="@id/sent_report"
            android:layout_centerHorizontal="true"
            android:background="@drawable/border_white"
            android:text="@string/close_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <!--Include the progress bar layout-->
    <include layout="@layout/dialog_progress_layout"/>

</RelativeLayout>