<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dappergeek0.uplanit.fragments.BrandDashGalleryFragment"
    tools:showIn="@layout/fragment_brand_dash_gallery">

    <!--<TextView-->
        <!--android:id="@+id/picture_count"-->
        <!--android:padding="@dimen/margin_five"-->
        <!--android:layout_margin="@dimen/margin_five"-->
        <!--android:layout_gravity="bottom|start"-->
        <!--android:textSize="@dimen/text_twelve"-->
        <!--android:text="12 of 12"-->
        <!--android:background="@color/colorBackground"-->
        <!--android:layout_marginBottom="@dimen/margin_two_five"-->
        <!--android:textColor="@color/white"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"/>-->

    <!--empty image gallery view   -->
    <RelativeLayout
        android:id="@+id/empty_gallery_view"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/no_gallery"
            android:layout_width="@dimen/lists_img_thumb_md"
            android:src="@drawable/empty_gallery"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/micro_margin"
            android:layout_height="@dimen/lists_img_thumb_md"/>

        <TextView
            android:id="@+id/empty_gallery"
            android:text="@string/empty_gallery_admin"
            android:layout_below="@id/no_gallery"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/micro_margin"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_eighteen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

     <!--buttons layout-->
    <RelativeLayout
        android:id="@+id/buttons_gallery"
        android:layout_width="match_parent"
        android:padding="@dimen/micro_margin"
        android:visibility="gone"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_clear_selected"
            android:layout_width="wrap_content"
            android:background="@drawable/border_white"
            android:textColor="@color/red"
            android:layout_alignParentStart="true"
            android:text="@string/clear_selected_images"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"/>

        <!--<Button-->
            <!--android:id="@+id/button_cancel_upload"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:text="@string/cancel_selected_images"-->
            <!--android:layout_height="wrap_content" />-->

        <Button
            android:id="@+id/button_upload_images"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content"

            android:background="@drawable/border_white"
            android:text="@string/upload_selected_images"
            android:textColor="@color/colorAccent"
            android:letterSpacing="0.1"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@id/buttons_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_selected"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_server"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical" />
        </LinearLayout>

    </RelativeLayout>

    <include layout="@layout/app_progress_bar"/>

</RelativeLayout>